islami init 1- quran finish 2- hadeth finish 3- tasbeh finish 4- radio finish 5- setting finish

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -4,5 +4,10 @@
   "hadeth": "أحاديث",
   "tasbeh": "تسبيح",
   "radio": "راديو",
-  "setting": "الإعدادات"
+  "setting": "الإعدادات",
+  "Language": "اللغه",
+  "Dark": "ليلي",
+  "Light": "نهاري",
+  "English": "إنجليزي",
+  "Arabic": "عربي"
 }
