islami init 1- quran finish 2- hadeth finish 3- tasbeh finish 4- radio finish 5- setting finish finish islami app

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,9 +5,10 @@
   "tasbeh": "تسبيح",
   "radio": "راديو",
   "setting": "الإعدادات",
-  "Language": "اللغه",
+  "language": "اللغه",
   "Dark": "ليلي",
   "Light": "نهاري",
   "English": "إنجليزي",
-  "Arabic": "عربي"
+  "Arabic": "عربي",
+  "theme": "الوضع"
 }
